EX-2417: fix overlap onboarding & ember build

--- a/modules/fresh-tab-frontend/app/styles/freshtab.scss
+++ b/modules/fresh-tab-frontend/app/styles/freshtab.scss
@@ -617,7 +617,6 @@ a:hover, a:active, a:focus {
     bottom: 0px;
     right: 20px;
     padding: 20px;
-    background-color: #ffffff;
 
     .options {
       float: right;
